--- a/README.me
+++ b/README.me
@@ -1,1 +1,5 @@
+# Velkommen
 
+Formålet med dette space er at have et samarbejdsforum omkring brugen af Erhvervsstyrelsens Blanketmotoren med mulighed for at indrapporterer og følge med i udviklingsønsker, samt se tidligere og planlagte releases
+
+For den mere detaljerede brugervejledning henvises til vores [Wiki](https://blanketmotor.atlassian.net/wiki/spaces/BW/overview "Blanketmotor Wiki")
